--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     <div class='menuview'>
-        <div><h3>Favorite Music</h3>
+        <div><h3>My Vibes</h3>
         </div>
     </div>
 
